# Curso_MineriaMultimedia

./: .gitignore  README.md  contenidos.md  install.py  main.py  pyproject.toml  unidad_1.md  unidad_2.md  unidad_3.md
Unidad 1/: ejemplo_con_early_stop.ipynb  ejemplo_overfitting.ipynb  libro11.ipynb  libro12.ipynb  libro13.ipynb  libro14.ipynb  libro2.ipynb  libro3.ipynb  libro4.ipynb  libro5.ipynb  libro6.ipynb  libro7.ipynb  modelo_cpu.ipynb  modelo_gpu.ipynb  temp.html  trabajo_en_clase.ipynb  unidad_1.md
Unidad 2/: Data_Augmentation.ipynb  carga_tranformaciones.ipynb  ejemplo_entrenamiento_completo.ipynb  entendiendo_la_convolucion_pytorch.ipynb  google_inception.ipynb  lenet.ipynb  modelo_convolucional_vs_denso.ipynb  resnet.ipynb  transfer_learning.ipynb  unidad_2.md  vgg.ipynb
Unidad 2/flowers-102/: 102flowers.tgz
Unidad 4/: unidad_4.md
