[project]
name = "curso-mineriamultimedia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyvis>=0.3.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn",
    "torchaudio",
    "torchvision",
    "tqdm>=4.68.2",
]

